// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`return idcc results for boulangerie 1`] = `
Object {
  "hits": Array [
    Object {
      "_id": "13",
      "_index": "cdtn_test_documents",
      "_score": 1.183259,
      "_source": Object {
        "id": "KALICONT000005635691",
        "idcc": 1747,
        "shortTitle": "Activités industrielles de boulangerie et pâtisserie",
        "slug": "1747-activites-industrielles-de-boulangerie-et-patisserie",
        "title": "Convention collective nationale des activités industrielles de boulangerie et pâtisserie du 13 juillet 1993. Mise à jour par avenant n°10 du 11 octobre 2011.",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635691",
      },
      "_type": "_doc",
    },
    Object {
      "_id": "14",
      "_index": "cdtn_test_documents",
      "_score": 1.183259,
      "_source": Object {
        "id": "KALICONT000005635886",
        "idcc": 843,
        "shortTitle": "Boulangerie-pâtisserie (entreprises artisanales)",
        "slug": "843-boulangerie-patisserie-entreprises-artisanales",
        "title": "Convention collective nationale de la boulangerie-pâtisserie du 19 mars 1976.  Etendue par arrêté du 21 juin 1978 JONC 28 juillet 1978.",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635886",
      },
      "_type": "_doc",
    },
  ],
  "max_score": 1.183259,
  "total": Object {
    "relation": "eq",
    "value": 2,
  },
}
`;

exports[`return idcc results for pati 1`] = `
Object {
  "hits": Array [
    Object {
      "_id": "13",
      "_index": "cdtn_test_documents",
      "_score": 1.1422366,
      "_source": Object {
        "id": "KALICONT000005635691",
        "idcc": 1747,
        "shortTitle": "Activités industrielles de boulangerie et pâtisserie",
        "slug": "1747-activites-industrielles-de-boulangerie-et-patisserie",
        "title": "Convention collective nationale des activités industrielles de boulangerie et pâtisserie du 13 juillet 1993. Mise à jour par avenant n°10 du 11 octobre 2011.",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635691",
      },
      "_type": "_doc",
    },
    Object {
      "_id": "14",
      "_index": "cdtn_test_documents",
      "_score": 1.1422366,
      "_source": Object {
        "id": "KALICONT000005635886",
        "idcc": 843,
        "shortTitle": "Boulangerie-pâtisserie (entreprises artisanales)",
        "slug": "843-boulangerie-patisserie-entreprises-artisanales",
        "title": "Convention collective nationale de la boulangerie-pâtisserie du 19 mars 1976.  Etendue par arrêté du 21 juin 1978 JONC 28 juillet 1978.",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635886",
      },
      "_type": "_doc",
    },
  ],
  "max_score": 1.1422366,
  "total": Object {
    "relation": "eq",
    "value": 2,
  },
}
`;
